# noawclg

./: .gitignore  CHANGELOG.md  Pipfile  README.md  README_COMANDOS.md  WORKLOG_2.2.md  conftest.py  juazeiro_plots.ipynb  juazeiro_tiktok.ipynb  juazeiro_weather.ipynb  noawclg.ipynb  python3  requirements.txt  setup.py
.github/workflows/: ci.yml
junit/: test-results-3.12.xml
main/: gfs_plot.py  test_nc.py
main/new_noawclg/: animat.py  fetch.py  get_keys_manual.py  gfs_variaveis.csv  keys.py
noawclg/: __init__.py  get.py  gfs_dataset.py  load.py  main.py
tests/: test_gfs_dataset.py  test_main.py
trash/: Untitled.ipynb  Untitled1.ipynb  __init__.py  api.py  dd.py  dd_time.py  get_all_data.py  help.py  help2.py  jua.json  jua_.xlsx  main.py  plot.py  pyproject.toml  save_dt.py  setup_ok.py  test.xlsx  test_data.py  test_key.py  test_place.py  test_point.py  test_v.py
trash/main/: gfs_plot.py
trash/main/new_noawclg/: animat.py  fetch.py  get_keys_manual.py
